# openpi

./: .gitignore  1.json  check_dataset.py  check_parquet_data.py  create_video.py  flwr.sh  franka_test_droid.py  franka_test_ros.py  liberoinfo.json  pi0.md  pyproject.toml  replay_parquet.py  robust_tokenizer.py  size_folder_gitignore.sh  tools.py  wandb_plot.py  zip_folder_gitigbore.py  笔记.txt
scripts/: cleanup_cache.py  compute_norm_stats_local.py.bak  serve_policy.py  serve_policy_local.py  tools_fl_fed.py  train.py
scripts/federated/: check_pb.py  chunked_transmission.py  client_flwr.py  client_flwr_cli.py  fixed_size_chunked_transmission.py  server_flwr_cli.py  server_flwr_simple.py  start_client_low_mem.sh  sync_chunked_transmission.py  test_evaluation_skip.py  test_progress_bars.py  test_server_weights.py  utils.py
scripts/federated_disk/: clear_logs.sh  client_flwr_disk.py  client_flwr_disk_noniid.py  plot_loss.py  server_flwr_disk.py
scripts/federated_disk/utils/: manual_snapshot_round.py  trim_jsonl_after_round.py
src/openpi/: transforms.py
src/openpi/augmentation/: README.md  __init__.py  image_transforms.py  utils.py
src/openpi/models/: pi0.py  pi0_franka.py  tokenizer_v2.py
src/openpi/training/: checkpoints.py  config.py  data_loader.py  local_dataset_config.py.bak  weight_loaders.py
